--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,20 @@
     display: flex;
     width: 100%;
 }
-
+.wrap {
+    position: relative;
+}
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0, .3);
+}
+.preloader.hidden {
+    display: none;
+}
 .data-mapping .col {
     padding: 10px 20px;
     display: flex;
